--- a/styles/style.css
+++ b/styles/style.css
@@ -192,8 +192,6 @@ h1, h2 {
   padding: 40px;
   margin: 0 0 30px 0;
   
-
-  
   background-color: #555;
 }
 
@@ -239,5 +237,12 @@ h1, h2 {
   .starting-length-text {
     font-size: 0.9rem;
   
+  }
+
+  .step-body {
+    max-width: 600px;
+  
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
