--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,7 @@
 
 :root {
   --spacer: 30px;
+  --mobile-width: 400px;
 }
 
 body {
@@ -219,12 +220,20 @@ h1, h2 {
 /* Continue making this mobile friendly.. */
 
 @media all and (max-width: 600px) {
+
+  #root {
+    display: block;
+  }
+
   #content {
-    margin-left: 0;
-    margin-right: 0;
+    max-width: 400px;
+    margin: 0px;
     padding-left: 0;
     padding-right: 0;
-    max-width: 600px;
+
+    padding: 50px 0px;
+    margin: 50px auto;
+
     font-size: 0.9rem;
 
   }
@@ -240,7 +249,8 @@ h1, h2 {
   }
 
   .step-body {
-    max-width: 600px;
+    min-width: 0px;
+    max-width: 400px;
   
     padding-left: 15px;
     padding-right: 15px;
