--- a/styles/style.css
+++ b/styles/style.css
@@ -77,10 +77,9 @@ body {
 }
 
 .cm-span {
-  margin: 0 5px 0 0;
+  margin: 0 7px 0 4px;
   font-size: 0.8rem;
   display: inline-block;
-  
   
 }
 
@@ -104,7 +103,7 @@ body {
 }
 
 .extend-wrapper input {
-
+  
 }
 
 #board-length, #size-limit {
