--- a/styles/style.css
+++ b/styles/style.css
@@ -77,9 +77,10 @@ body {
 }
 
 .cm-span {
-  margin: 0 7px 0 4px;
+  margin: 0 5px 0 0;
   font-size: 0.8rem;
   display: inline-block;
+  
   
 }
 
@@ -103,7 +104,7 @@ body {
 }
 
 .extend-wrapper input {
-  
+
 }
 
 #board-length, #size-limit {
@@ -143,7 +144,7 @@ body {
 }
 
 .repeat-wrapper input {
- width: 4ch;
+ width: 5ch;
  padding: 5px;
 }
 
