--- a/styles/style.css
+++ b/styles/style.css
@@ -77,7 +77,7 @@ body {
 }
 
 .cm-span {
-  margin: 0 5px 0 0;
+  margin: 0 5px 0 2px;
   font-size: 0.8rem;
   display: inline-block;
   
@@ -97,8 +97,8 @@ body {
 }
 
 .extend-wrapper {
+  padding: var(--padder);
   margin-bottom: var(--spacer);
-  padding: 10px var(--padder);
   background-color: var(--color-800);
   
 }
