--- a/styles/style.css
+++ b/styles/style.css
@@ -66,7 +66,7 @@ body {
 .parameter-inputs {
   
   padding: 10px;
-  background-color: var(--color-900);
+  background-color: var(--color-700);
 
 }
 
@@ -113,6 +113,10 @@ body {
 
 }
 
+.add-cuts__measurements__input {
+  margin-left: 10px !important;
+}
+
 .add-cuts__measurements__repeat {
   margin: 0 var(--padder) 0 10px;
 }
@@ -141,13 +145,13 @@ body {
   max-height: 80px;
   width: 100%;
   padding: 20px;
-  margin: 0 0 10px 0;
+  margin: 15px 0 ;
   text-align: center;
 
   font-weight: bold;
-  color: var(--color-300);
+  color: var(--color-400);
   background-color: var(--color-700);
-  box-shadow: inset 5px 5px 5px -4px #777;
+  /* box-shadow: inset 5px 5px 5px -4px #777; */
 
   overflow: hidden;
 }
@@ -159,11 +163,13 @@ body {
 
 #app { 
   /* Child of Content */
-  
+  width: min(90vw, 457px);
+
 }
 
 .instructions {
   /* Child of App */
+  width: 100%;
   margin: 0 0 var(--spacer-macro) 0;
   color: var(--color-700);
 }
