--- a/styles/style.css
+++ b/styles/style.css
@@ -101,10 +101,16 @@ body {
 }
 
 
+.add-cuts__text {
+  /* padding: var(--padder); */
+  padding-right: 7px;
+  background: var(--color-800);
+
+}
 
 .add-cuts__measurements {
-  padding: var(--padder);
-  margin-bottom: var(--spacer);
+  padding: var(--padder) 0px 15px var(--padder);
+  margin-bottom: 30px;
 
   display: flex;
   align-items: baseline;
@@ -114,7 +120,7 @@ body {
 }
 
 .add-cuts__measurements__input {
-  margin-left: 10px !important;
+  margin-left: 0 !important;
 }
 
 .add-cuts__measurements__repeat {
@@ -126,8 +132,14 @@ body {
  padding: 5px;
 }
 
-#add-cuts__measurements__button {
-  padding: 5px 20px;
+.add-cuts__button-container {
+ 
+
+}
+
+#add-cuts__button {
+  padding: 10px 30px;
+  margin: 0 0 30px 0px;
   border: none;
   border-radius: 100px;
   
